--- a/movie.ipynb
+++ b/movie.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPxFXWUyX5ndo/wcbz4hDQk",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -22934,6 +22936,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/asif1424/Practice-code-ML-DL/blob/main/movie.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "**load dataset**"
       ],
@@ -22943,7 +22955,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -22987,7 +22999,7 @@
         "id": "_HSje09EqWaC",
         "outputId": "23da3571-6220-4bfe-a059-3f15cf85fc64"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -23049,7 +23061,7 @@
         "id": "obYItvT5qWQ1",
         "outputId": "a7d52836-c944-45d7-9baf-bd45ad417a3d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -23093,7 +23105,7 @@
         "id": "0izYXdhGqWEX",
         "outputId": "78766189-5c98-4911-d071-a2ffa8344057"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -23139,7 +23151,7 @@
         "id": "vGfsz64V4ECu",
         "outputId": "d4292ba1-2273-4d41-d201-90426625440c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -23187,7 +23199,7 @@
         "id": "RsYgGLBP4Ru7",
         "outputId": "5154885b-3aea-43e1-f616-f2c72f0aa698"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -23239,7 +23251,7 @@
         "id": "S8WqcNIm4lZ_",
         "outputId": "0733e724-049b-48bb-c279-653042e8fedd"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -23279,7 +23291,7 @@
       "source": [
         "!pip install implicit"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -23330,7 +23342,7 @@
         "id": "EBvDyfcS7gUO",
         "outputId": "11027d6e-873d-4f18-e33c-2a1c88d96c37"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -23394,7 +23406,7 @@
         "print(\"Training set shape:\", train_df.shape)\n",
         "print(\"Testing set shape:\", test_df.shape)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -23470,7 +23482,7 @@
         "\n",
         "print(\"Training user-item matrix shape:\", train_user_item_matrix.shape)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -23555,7 +23567,7 @@
         "print(\"Test set with predicted ratings head:\")\n",
         "print(test_df.head())"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -23620,7 +23632,7 @@
         "print(\"Test set with predicted ratings head:\")\n",
         "print(test_df.head())"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -23681,7 +23693,7 @@
         "\n",
         "print(f\"Root Mean Squared Error (RMSE): {rmse}\")"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -24335,7 +24347,7 @@
         "id": "SDhrAeNp8ca2",
         "outputId": "1910ef9c-1b78-417f-a43f-1c6386a42aaf"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -25401,9 +25413,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "-nQgLkNL_HQG"
       }
@@ -25634,7 +25644,7 @@
         "id": "B8pJxYod9ntG",
         "outputId": "5b05d6fa-567b-4797-8ed0-fe8f61cd57eb"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
